--- a/src/app/module/tour/component/tour-package/tour-package.component.scss
+++ b/src/app/module/tour/component/tour-package/tour-package.component.scss
@@ -2,7 +2,7 @@
   background: #f8f9fa;
   padding: 24px;
   border-radius: 4px;
-  margin-top: 20px;
+  margin: 20px auto;
 
   .content {
     h2 {
