--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -66,7 +66,6 @@
     rgba(0, 0, 0, 0.7) 0%,
     rgb(0 0 0 / 0%) 100%
   );
-  // padding: 15px 0;
   transition: all 0.3s ease;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
@@ -79,6 +78,7 @@
     .search-button {
       color: var(--pure-black);
       border-color: rgba(0, 0, 0, 0.1);
+      border: 1px solid rgba(14, 14, 14, 0.685);
 
       .search-icon {
         color: var(--pure-black);
@@ -94,11 +94,8 @@
     }
 
     .contact-info {
-      color: var(--pure-black);
-
-      a{
-      color: var(--pure-black);
-
+      a {
+        color: var(--pure-black);
       }
     }
   }
@@ -143,6 +140,7 @@
   transition: all 0.3s ease;
   position: relative;
   backdrop-filter: blur(8px);
+  border: 1px solid rgba(255, 255, 255, 0.685);
 
   .search-icon {
     display: flex;
@@ -165,6 +163,7 @@
     font-size: 14px;
     color: rgba(255, 255, 255, 0.9);
     white-space: nowrap;
+    font-weight: 600;
   }
 
   .destination-wrapper {
@@ -239,16 +238,28 @@
 .right-section {
   display: flex;
   align-items: center;
-  gap: 24px;
+  gap: 14px;
   flex-shrink: 0;
 
   .contact-info {
     a {
       color: var(--white);
+      display: flex;
+      align-items: center;
+      gap: 2px;
+      text-decoration: none;
+      transition: all 0.3s ease;
+      padding: 0 2px;
+      border-radius: 6px;
+
+      i {
+        font-size: 18px;
+      }
+
+      &:hover {
+        background: rgba(255, 255, 255, 0.1);
+      }
     }
-    color: var(--white);
-    font-size: 14px;
-    transition: color 0.3s ease;
   }
 }
 
