--- a/src/app/module/tour/component/breadcrumbs/breadcrumbs.component.css
+++ b/src/app/module/tour/component/breadcrumbs/breadcrumbs.component.css
@@ -8,15 +8,17 @@
 
 swiper-container {
   width: 100%;
-  height: 100%;
+  min-height: 100vh; /* Added */
 }
 
 .slide-wrapper {
   position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 100vh; /* Changed from height */
   background-size: cover;
   background-position: center;
+  display: flex; /* Added */
+  align-items: center; /* Added */
 }
 
 .overlay {
