--- a/src/app/module/tour/component/tour-package/tour-package.component.html
+++ b/src/app/module/tour/component/tour-package/tour-package.component.html
@@ -17,8 +17,14 @@
   <!-- Actual content -->
   <div class="content" *ngIf="!isLoading && !error && location">
     <h2>{{ location.name }}</h2>
-    <p>{{ getFirstLine(location.content) }} <a href="javascript:void(0)" (click)="openModal()">Read more</a> </p>
+    <!-- <p>{{ getFirstLine(location.content) }} <a href="javascript:void(0)" class="main-color-two font-600" (click)="openModal()">Read more</a> </p> -->
     <!-- <button class="cta-button" (click)="openModal()">Read More</button> -->
+    <p class="truncated-text">
+      {{ getFirstLine(location.content) }}
+      <a href="javascript:void(0)" class="main-color-two font-600" (click)="openModal()">
+        Read more
+      </a>
+    </p>
   </div>
 </div>
 
