--- a/src/app/module/tour/component/tour-package/tour-package.component.scss
+++ b/src/app/module/tour/component/tour-package/tour-package.component.scss
@@ -19,6 +19,23 @@
   }
 }
 
+.truncated-text {
+  color: #666;
+  margin-bottom: 16px;
+  line-height: 1.5;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  position: relative;
+  padding-right: 80px; // Space for read more link
+
+  a {
+    text-decoration: none;
+    position: absolute;
+    right: 0;
+  }
+}
+
 .modal {
   display: none;
   position: fixed;
